language switcher dropdown :^)

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -1,6 +1,9 @@
 {
-    "sidebar": {
+    "topbar": {
         "dashboard": "Dashboard",
+        "select-game": "Select Game"
+    },
+    "keywords": {
         "settings": "Settings"
     },
     "languages": {
