--- a/frontend/src/i18n/locales/de.json
+++ b/frontend/src/i18n/locales/de.json
@@ -1,4 +1,8 @@
 {
+    "search-packages": {
+        "header": "Durchsuchen Sie Pakete nach Benutzer",
+        "empty-input": "Kein Benutzer eingegeben"
+    },
     "topbar": {
         "dashboard": "Armaturenbrett",
         "select-game": "Spiel auswählen"
@@ -11,12 +15,21 @@
     },
     "keywords": {
         "settings": "Einstellungen",
-        "download": "Herunterladen"
+        "download": "Herunterladen",
+        "get": "Erhalten",
+        "new": "Neu",
+        "back": "Zurück"
     },
     "languages": {
         "en": "Englisch",
         "fr": "Französisch",
         "de": "Deutsch",
-        "ae": "Arabisch"
+        "ae": "Arabisch",
+        "jp": "japanisch",
+        "ru": "Russisch",
+        "ua": "ukrainisch",
+        "se": "Schwedisch",
+        "it": "Italienisch",
+        "es": "Spanisch"
     }
 }
