--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -16,6 +16,7 @@
     "keywords": {
         "settings": "Settings",
         "download": "Download",
+        "language": "Language",
         "get": "Get",
         "new": "New",
         "back": "Back"
