--- a/frontend/src/i18n/locales/fr.json
+++ b/frontend/src/i18n/locales/fr.json
@@ -16,6 +16,7 @@
     "keywords": {
         "settings": "Paramètres",
         "download": "Télécharger",
+        "language": "Langue",
         "get": "Obtenir",
         "new": "Nouveau",
         "back": "Dos"
