--- a/frontend/src/i18n/locales/de.json
+++ b/frontend/src/i18n/locales/de.json
@@ -16,6 +16,7 @@
     "keywords": {
         "settings": "Einstellungen",
         "download": "Herunterladen",
+        "language": "Sprache",
         "get": "Erhalten",
         "new": "Neu",
         "back": "Zurück"
