--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -1,37 +1,38 @@
 {
-    "search-packages": {
-        "header": "Search packages by user",
-        "empty-input": "No user entered"
-    },
-    "topbar": {
-        "dashboard": "Dashboard",
-        "select-game": "Select Game"
-    },
-    "game-selection": {
-        "header": "Choose a game to manage mods for.",
-        "select-button": "Select game"
-    },
-    "settings": {
-        "select-language": "Select language"
-    },
-    "keywords": {
-        "settings": "Settings",
-        "download": "Download",
-        "language": "Language",
-        "get": "Get",
-        "new": "New",
-        "back": "Back"
-    },
-    "languages": {
-        "en": "English",
-        "fr": "French",
-        "de": "German",
-        "ae": "Arabic",
-        "jp": "Japanese",
-        "ru": "Russian",
-        "ua": "Ukrainian",
-        "se": "Swedish",
-        "it": "Italian",
-        "es": "Spanish"
-    }
+  "search-packages": {
+    "header": "Search packages by user",
+    "empty-input": "No user entered"
+  },
+  "topbar": {
+    "dashboard": "Dashboard",
+    "select-game": "Select Game"
+  },
+  "game-selection": {
+    "header": "Select which game you are managing mods for.",
+    "select-button": "Select Game",
+    "search-placeholder": "Search title.."
+  },
+  "settings": {
+    "select-language": "Select language"
+  },
+  "keywords": {
+    "settings": "Settings",
+    "download": "Download",
+    "language": "Language",
+    "get": "Get",
+    "new": "New",
+    "back": "Back"
+  },
+  "languages": {
+    "en": "English",
+    "fr": "French",
+    "de": "German",
+    "ae": "Arabic",
+    "jp": "Japanese",
+    "ru": "Russian",
+    "ua": "Ukrainian",
+    "se": "Swedish",
+    "it": "Italian",
+    "es": "Spanish"
+  }
 }
