language is now persistent across restarts

--- a/frontend/src/i18n/locales/de.json
+++ b/frontend/src/i18n/locales/de.json
@@ -21,7 +21,8 @@
     "language": "Sprache",
     "get": "Erhalten",
     "new": "Neu",
-    "back": "Zurück"
+    "back": "Zurück",
+    "theme": "Thema"
   },
   "languages": {
     "en": "Englisch",
