--- a/frontend/src/i18n/locales/fr.json
+++ b/frontend/src/i18n/locales/fr.json
@@ -21,7 +21,8 @@
     "language": "Langue",
     "get": "Obtenir",
     "new": "Nouveau",
-    "back": "Dos"
+    "back": "Dos",
+    "theme": "Thème"
   },
   "languages": {
     "en": "Anglais",
