--- a/frontend/src/i18n/locales/fr.json
+++ b/frontend/src/i18n/locales/fr.json
@@ -13,7 +13,11 @@
     "select-button": "Sélectionnez un jeu"
   },
   "settings": {
-    "select-language": "Choisir la langue"
+    "select-language": "Choisir la langue",
+    "gpu-acceleration": "Accélération GPU",
+    "threads": "Sujets",
+    "update-behaviour": "Comportement de mise à jour",
+    "animations-enabled": "Activer les animations"
   },
   "keywords": {
     "settings": "Paramètres",
@@ -22,18 +26,21 @@
     "get": "Obtenir",
     "new": "Nouveau",
     "back": "Dos",
-    "theme": "Thème"
+    "theme": "Thème",
+    "performance": "Performance",
+    "misc": "Divers",
+    "general": "Général"
   },
   "languages": {
     "en": "Anglais",
     "fr": "Français",
     "de": "Allemand",
-    "ae": "arabe",
+    "ae": "Arabe",
     "jp": "Japonais",
-    "ru": "russe",
-    "ua": "ukrainien",
-    "se": "suédois",
-    "it": "italien",
+    "ru": "Russe",
+    "ua": "Ukrainien",
+    "se": "Suédois",
+    "it": "Italien",
     "es": "Espagnol"
   }
 }
