--- a/frontend/src/i18n/locales/it.json
+++ b/frontend/src/i18n/locales/it.json
@@ -44,7 +44,8 @@
     "close": "Vicino",
     "apply": "Fare domanda a",
     "installed": "Installato",
-    "all": "Tutto"
+    "all": "Tutto",
+    "favourite": "Preferito"
   },
   "languages": {
     "en": "Inglese",
@@ -59,9 +60,14 @@
     "es": "Spagnolo"
   },
   "tooltips": {
-    "dashboard": "Pannello di controllo",
-    "game-selection": "Selezione del gioco",
-    "mod-dev-tools": "Strumenti per sviluppatori di mod"
+    "sidebar": {
+      "dashboard": "Pannello di controllo",
+      "game-selection": "Selezione del gioco",
+      "mod-dev-tools": "Strumenti per sviluppatori di mod"
+    },
+    "game-selection": {
+      "open-folder-location": "Apri il percorso della cartella"
+    }
   },
   "phrases": {
     "reset-all-default": "Ripristina tutto ai valori predefiniti"
