too tired to document

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -30,7 +30,7 @@
       "mod-dev-tools": "Mod Developer Tools"
     },
     "game-selection": {
-      "open-folder-location": "Open folder location"
+      "open-folder-location": "Open game folder"
     }
   },
   "phrases": {
