--- a/frontend/src/i18n/locales/de.json
+++ b/frontend/src/i18n/locales/de.json
@@ -66,7 +66,7 @@
       "mod-dev-tools": "Mod-Entwicklertools"
     },
     "game-selection": {
-      "open-folder-location": "Ordnerspeicherort öffnen"
+      "open-folder-location": "Spielordner öffnen"
     }
   },
   "phrases": {
