--- a/frontend/src/i18n/locales/es.json
+++ b/frontend/src/i18n/locales/es.json
@@ -66,7 +66,7 @@
       "mod-dev-tools": "Herramientas para desarrolladores de modificaciones"
     },
     "game-selection": {
-      "open-folder-location": "Abrir ubicación de la carpeta"
+      "open-folder-location": "Abrir carpeta del juego"
     }
   },
   "phrases": {
