--- a/frontend/src/i18n/locales/fr.json
+++ b/frontend/src/i18n/locales/fr.json
@@ -66,7 +66,7 @@
       "mod-dev-tools": "Outils de développement de modules"
     },
     "game-selection": {
-      "open-folder-location": "Emplacement du dossier ouvert"
+      "open-folder-location": "Ouvrir le dossier du jeu"
     }
   },
   "phrases": {
