--- a/frontend/src/i18n/locales/it.json
+++ b/frontend/src/i18n/locales/it.json
@@ -66,7 +66,7 @@
       "mod-dev-tools": "Strumenti per sviluppatori di mod"
     },
     "game-selection": {
-      "open-folder-location": "Apri il percorso della cartella"
+      "open-folder-location": "Apri la cartella del gioco"
     }
   },
   "phrases": {
