improve game store and update GameSelection view accordingly

--- a/frontend/src/i18n/locales/de.json
+++ b/frontend/src/i18n/locales/de.json
@@ -45,7 +45,8 @@
     "apply": "Anwenden",
     "installed": "Eingerichtet",
     "all": "Alle",
-    "favourite": "Favorit"
+    "favourite": "Favorit",
+    "favourites": "Favoriten"
   },
   "languages": {
     "en": "Englisch",
