--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -56,7 +56,8 @@
     "off": "Off",
     "on": "On",
     "yes": "Yes",
-    "no": "No"
+    "no": "No",
+    "favourites": "Favourites"
   },
   "languages": {
     "en": "English",
