--- a/frontend/src/i18n/locales/es.json
+++ b/frontend/src/i18n/locales/es.json
@@ -45,7 +45,8 @@
     "apply": "Aplicar",
     "installed": "Instalado",
     "all": "Todo",
-    "favourite": "Favorito"
+    "favourite": "Favorito",
+    "favourites": "Favoritos"
   },
   "languages": {
     "en": "Inglés",
