--- a/frontend/src/i18n/locales/fr.json
+++ b/frontend/src/i18n/locales/fr.json
@@ -45,7 +45,8 @@
     "apply": "Appliquer",
     "installed": "installée",
     "all": "Tous",
-    "favourite": "Préféré"
+    "favourite": "Préféré",
+    "favourites": "Favoris"
   },
   "languages": {
     "en": "Anglais",
