--- a/frontend/src/i18n/locales/it.json
+++ b/frontend/src/i18n/locales/it.json
@@ -45,7 +45,8 @@
     "apply": "Fare domanda a",
     "installed": "Installato",
     "all": "Tutto",
-    "favourite": "Preferito"
+    "favourite": "Preferito",
+    "favourites": "Preferiti"
   },
   "languages": {
     "en": "Inglese",
