qol in game selection view

--- a/frontend/src/i18n/locales/de.json
+++ b/frontend/src/i18n/locales/de.json
@@ -46,7 +46,8 @@
     "installed": "Eingerichtet",
     "all": "Alle",
     "favourite": "Favorit",
-    "favourites": "Favoriten"
+    "favourites": "Favoriten",
+    "unfavourite": "Unfavorit"
   },
   "languages": {
     "en": "Englisch",
