--- a/frontend/src/i18n/locales/es.json
+++ b/frontend/src/i18n/locales/es.json
@@ -46,7 +46,8 @@
     "installed": "Instalado",
     "all": "Todo",
     "favourite": "Favorito",
-    "favourites": "Favoritos"
+    "favourites": "Favoritos",
+    "unfavourite": "No favorito"
   },
   "languages": {
     "en": "Inglés",
