--- a/frontend/src/i18n/locales/de.json
+++ b/frontend/src/i18n/locales/de.json
@@ -47,7 +47,8 @@
     "all": "Alle",
     "favourite": "Favorit",
     "favourites": "Favoriten",
-    "unfavourite": "Unfavorit"
+    "unfavourite": "Unfavorit",
+    "install": "Installieren"
   },
   "languages": {
     "en": "Englisch",
