--- a/frontend/src/i18n/locales/fr.json
+++ b/frontend/src/i18n/locales/fr.json
@@ -47,7 +47,8 @@
     "all": "Tous",
     "favourite": "Préféré",
     "favourites": "Favoris",
-    "unfavourite": "Défavorisé"
+    "unfavourite": "Défavorisé",
+    "install": "Installer"
   },
   "languages": {
     "en": "Anglais",
