--- a/frontend/src/i18n/locales/it.json
+++ b/frontend/src/i18n/locales/it.json
@@ -47,7 +47,8 @@
     "all": "Tutto",
     "favourite": "Preferito",
     "favourites": "Preferiti",
-    "unfavourite": "Sfavorito"
+    "unfavourite": "Sfavorito",
+    "install": "Installare"
   },
   "languages": {
     "en": "Inglese",
